--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <img id="ship" style="display: none"src="../assets/ship.png">
   <img id="ship-firing" style="display: none"src="../assets/ship_firing.png">
-  <script src="../src/bundle/bundle.js"></script>
+  <script src="./src/bundle/bundle.js"></script>
   <title>Suicide Burn</title>
 </head>
 
