--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <img id="ship" style="display: none"src="../assets/ship.png">
-  <img id="ship-firing" style="display: none"src="../assets/ship_firing.png">
+  <img id="ship" style="display: none"src="./assets/ship.png">
+  <img id="ship-firing" style="display: none"src="./assets/ship_firing.png">
   <script src="./src/bundle/bundle.js"></script>
   <title>Suicide Burn</title>
 </head>
