minor style changes, add contact buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <img id="ship" style="display: none"src="./assets/ship.png">
   <img id="ship-firing" style="display: none"src="./assets/ship_firing.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="./src/bundle/bundle.js"></script>
+  <link rel="stylesheet" href="./stylesheet.css" />
   <title>Suicide Burn</title>
 </head>
 
@@ -17,19 +19,23 @@
   <canvas id="layer3" style="position: absolute; left: 0; top: 0; z-index: 2;"></canvas>
   <canvas id="layer4" style="position: absolute; left: 0; top: 0; z-index: 3;"></canvas>
 </div>
-<div style='position: absolute;
- top: 28%;
- left: 30%; 
- z-index: 50;
- width: 45%;
- 
- '>
-  <ul id='high-score-name' style='color: white;display:inline-block;
- float:none;list-style-type: none;font-size: 36px;margin-right: 37%' ></ul>
-  <ul id='high-score-score' style='color: white;display:inline-block;
- float:none;list-style-type: none;font-size: 36px;text-align: right' ></ul>
+<div id='high-score-wrapper'>
+  <ul id='high-score-name' ></ul>
+  <ul id='high-score-score' ></ul>
 </div>
 </body>
 
+
+
+<footer class="footer">
+  <ul class="icons">
+    <li><a href="mailto:nader.arb72@gmail.com" class="icon fa fa-envelope "></a></li>
+
+    <li><a href="https://www.linkedin.com/in/naderarbabian/" class="icon fa fa-linkedin-square "></a></li>
+
+    <li><a href="https://github.com/Nader-gator" class="icon fa fa-github "></a></li>
+  </ul>
+
+</footer>
 
 </html>
