--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <canvas id="layer2" style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>
   <canvas id="layer3" style="position: absolute; left: 0; top: 0; z-index: 2;"></canvas>
   <canvas id="layer4" style="position: absolute; left: 0; top: 0; z-index: 3;"></canvas>
+  <canvas id="layer5" style="position: absolute; left: 0; top: 0; z-index: -1;"></canvas>
+  <canvas id="layer6" style="position: absolute; left: 0; top: 0; z-index: 2;"></canvas>
 </div>
 <div id='high-score-wrapper'>
   <ul id='high-score-name' ></ul>
