--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <img id="ship" style="display: none"src="./assets/ship.png">
   <img id="ship-firing" style="display: none"src="./assets/ship_firing.png">
+  <img id="explosion1" style="display: none"src="./assets/explosion1.png">
+  <img id="explosion2" style="display: none"src="./assets/explosion2.png">
+  <img id="explosion3" style="display: none"src="./assets/explosion3.png">
+  
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="./src/bundle/bundle.js"></script>
   <link rel="stylesheet" href="./stylesheet.css" />
