change github link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <li><a href="https://www.linkedin.com/in/naderarbabian/" class="icon fa fa-linkedin-square "></a></li>
 
-    <li><a href="https://github.com/Nader-gator" class="icon fa fa-github "></a></li>
+    <li><a href="https://github.com/Nader-gator/SuicideBurn" class="icon fa fa-github "></a></li>
   </ul>
 
 </footer>
