--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <canvas id="layer5" style="position: absolute; left: 0; top: 0; z-index: -1;"></canvas>
   <canvas id="layer6" style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
 </div>
+<div style="display: none" id='anchor'></div>
 <div id='high-score-wrapper'>
   <ul id='high-score-name' ></ul>
   <ul id='high-score-score' ></ul>
