update personal links

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
 
 <footer class="footer">
   <ul class="icons">
-    <li><a href="mailto:nader.arb72@gmail.com" class="icon fa fa-envelope "></a></li>
+    <li><a href="mailto:nader.arb72@gmail.com"><i class="icon fa fa-envelope "></i></a></li>
 
-    <li><a href="https://www.linkedin.com/in/naderarbabian/" class="icon fa fa-linkedin-square "></a></li>
+    <li><a href="https://www.linkedin.com/in/naderarbabian/"><i class="icon fa fa-linkedin-square "></i></a></li>
 
-    <li><a href="https://github.com/Nader-gator/SuicideBurn" class="icon fa fa-github "></a></li>
+    <li><a href="https://github.com/Nader-gator/SuicideBurn"><i class="icon fa fa-github "></i></a></li>
+    
+    <li><a href="https://angel.co/nader-arbabian"><i class="icon fa fa-angellist "></i></a></li>
+    
+    <li><a href="https://nader-a.com"><i class="icon fa fa-globe " aria-hidden="true"></i></a></li>
   </ul>
 
 </footer>
